--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,39 @@
-# --- Python / Flask ---
-venv/
+# Python
 __pycache__/
 *.pyc
-instance/
+*.pyo
+*.pyd
 *.db
+instance/
+.env
+.env.*
+.venv/
+venv/
 *.sqlite3
 
-# --- Environment / Config ---
-.env
-
-# --- Node / React ---
-frontend/node_modules/
-frontend/build/
-frontend/.env
-
-# --- Logs / Caches ---
+# Flask logs
 *.log
-*.pot
-*.mo
-.DS_Store
+
+# Node / React
+node_modules/
+dist/
+build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Vite
+.vite/
+.cache/
+*.local
+
+# IDE / Editor
+.vscode/
+.idea/
 *.swp
 *.swo
 
-# --- IDE / Editors ---
-.vscode/
-.idea/
-*.iml
+# OS
+.DS_Store
+Thumbs.db
